[package]
name = "solana_fellowship_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.18"
spl-token = "4.0"
bs58 = "0.5"
base64 = "0.21"
ed25519-dalek = "1"
thiserror = "1.0"
hyper = "1.6.0"
